hard-gists/2951556/run.log
=== Docker Run Log for 2951556 ===
Started at: Mi 29. Okt 13:21:52 CET 2025

[2025-10-29 13:21:53] START: Running container for 2951556
[2025-10-29 13:21:53] SUCCESS: Container 02ee79123867af47b0108e66b4df8222456e4d4a4517747b3d88835048c3a309 started for 2951556
=== Container logs for 2951556 ===
  File "/snippet.py", line 26
    print my_config_dict
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2951556 ===
[2025-10-29 13:21:55] INFO: Container 02ee79123867af47b0108e66b4df8222456e4d4a4517747b3d88835048c3a309 has stopped
